# ralph-loop-cc-tdd-template

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  TEMPLATE_USAGE.md  mkdocs.yaml  pyproject.toml
.claude/: settings.json
.claude/commands/: commit-with-message.md  phase-exec-planner.md  phase-implement.md  phase-review.md
.claude/rules/: core-principles.md
.claude/scripts/: statusline.sh
.claude/scripts/ralph/: init.sh  prompt.md  ralph.sh
.claude/skills/building-userstory/: SKILL.md
.claude/skills/designing-backend/: SKILL.md
.claude/skills/generating-prd/: SKILL.md
.claude/skills/generating-prd-from-userstory/: SKILL.md
.devcontainer/: README.md  devcontainer.json
.devcontainer/project/: devcontainer.json
.devcontainer/template/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: bump-my-version.yaml  codeql.yaml  generate-deploy-mkdocs-ghpages.yaml  links-fail-fast.yaml  pyright.yaml  pytest.yaml  ruff.yaml  summarize-jobs-reusable.yaml
docs/: PRD.md  RalphUsage.md  TEMPLATE_USAGE.md  UserStory.md  python-best-practices.md
docs/templates/: README.template.md  pyproject.template.toml
ralph/archive/: .gitkeep
ralph/scripts/: init.sh  ralph.sh  reorganize_prd.sh  setup_project.sh
ralph/state/: .gitkeep
ralph/templates/: prd.json.template  progress.txt.template  prompt.md
scripts/: setup_project.sh
scripts/ralph/: init.sh  prompt.md  ralph.sh  reorganize_prd.sh
src/[APP-NAME]/: __init__.py
src/your_project_name/: __init__.py
(+8 files in other folders)
